<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sosButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank07"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/dataArea"
        android:layout_width="wrap_content"
        android:layout_height="571dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <Button
            android:id="@+id/resetBaseline"
            android:layout_width="176dp"
            android:layout_height="36dp"
            android:text="@string/resetBaseline" />

        <TextView
            android:id="@+id/userNameTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/useBLN" />

        <TextView
            android:id="@+id/hrLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hrLabel"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/hrValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/hrBaseline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hrBaseline"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/battery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature"
            android:layout_marginTop="10dp"
            android:text="@string/battery_label"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_label"
            android:text="@string/emptyText"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/wrist_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrist_status_label"
            android:text="@string/emptyText"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="160dp"
            android:layout_height="36dp"
            android:text="@string/stop"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/backHomeLayout"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/backHome"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/backHome" />

        <Button
            android:id="@+id/userStress"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/userStress" />
    </LinearLayout>

    <Button
        android:id="@+id/restartButton"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/restartButton" />

    <LinearLayout
        android:id="@+id/toolKit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/openingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openingText"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/moodJournal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/mood_journal" />

        <Button
            android:id="@+id/powerPool"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/powerPool" />

        <Button
            android:id="@+id/breatheTraining"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/breatheTraining" />

        <Button
            android:id="@+id/posThinking"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/positiveThinking" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/extraLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_label"
            android:text="@string/emptyText"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi"
            android:layout_marginTop="10dp"
            android:text="@string/temp_label"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/accel_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_label"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_x" />

            <TextView
                android:id="@+id/accel_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_y" />

            <TextView
                android:id="@+id/accel_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_z" />

            <TextView
                android:id="@+id/accel_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

        </LinearLayout>

        <TextView
            android:id="@+id/bvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/bvp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_area"
            android:layout_marginTop="10dp"
            android:text="@string/bvp_label" />

        <TextView
            android:id="@+id/ibi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/ibi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda"
            android:layout_marginTop="10dp"
            android:text="@string/ibi_label" />

        <TextView
            android:id="@+id/accel_label"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/accel" />

        <TextView
            android:id="@+id/eda_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp"
            android:layout_marginTop="10dp"
            android:text="@string/eda_label"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/eda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda_label"
            android:text="@string/emptyText"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
